"Sample colour" picks incorrect colour if Mirror modifier exists on mesh #58763

Closed
opened 2018-12-05 04:13:33 +01:00 by Clint Hobson · 8 comments

System Information
Operating system: Ubuntu 18.04
Graphics card: Nvidia Geforce 1080

Blender Version
Broken: 2.80, 0f5b53ba4d

Short description of error
"Sample colour" picks incorrect colour if Mirror modifier exists on mesh

Exact steps for others to reproduce the error

  • Open the attached blend file text paint.blend
  • Press S key to sample the blue colour, and then paint in the red area, and vice versa
  • Notice it does not paint with the expected colour
  • "Apply" the Mirror modifier so it no longer exists in the modifier stack

Attempt sampling colours and painting as above, notice it now paints with the expected colour.

**System Information** Operating system: Ubuntu 18.04 Graphics card: Nvidia Geforce 1080 **Blender Version** Broken: 2.80, 0f5b53ba4dc **Short description of error** "Sample colour" picks incorrect colour if Mirror modifier exists on mesh **Exact steps for others to reproduce the error** - Open the attached blend file [text paint.blend](https://archive.blender.org/developer/F5826991/text_paint.blend) - Press S key to sample the blue colour, and then paint in the red area, and vice versa - Notice it does not paint with the expected colour - "Apply" the Mirror modifier so it no longer exists in the modifier stack # Attempt sampling colours and painting as above, notice it now paints with the expected colour.
Author

Added subscriber: @Domarius-1

Added subscriber: @Domarius-1

Added subscriber: @YAFU

Added subscriber: @YAFU

For developers: after reloading packed Untitled.png image from Image Texture node for it to be shown in 3D View, you take several color samples with "S" key in different parts from the front. You will notice that sometimes the color sampled is the front color (blue) and sometimes the one from the back (red)

For developers: after reloading packed Untitled.png image from Image Texture node for it to be shown in 3D View, you take several color samples with "S" key in different parts from the front. You will notice that sometimes the color sampled is the front color (blue) and sometimes the one from the back (red)

Added subscriber: @ZedDB

Added subscriber: @ZedDB
Campbell Barton was assigned by Sebastian Parborg 2018-12-06 15:30:17 +01:00

I can confirm that this is bugged.
If I hold down the S key and hover my mouse over the blue side of the mesh (doesn't matter if it is on the mirrored part or not), I can see that the color picker flickers quickly between red and blue. If I apply the mirror modifier, the color seems to stay solid blue (as it should).

I can confirm that this is bugged. If I hold down the S key and hover my mouse over the blue side of the mesh (doesn't matter if it is on the mirrored part or not), I can see that the color picker flickers quickly between red and blue. If I apply the mirror modifier, the color seems to stay solid blue (as it should).
Author

As a work around, I found that I can simply hide the mirror modifier while painting, rather than remove it altogether.

As a work around, I found that I can simply hide the mirror modifier while painting, rather than remove it altogether.

This issue was referenced by 794aef3f25

This issue was referenced by 794aef3f259ef0833e45d9cfd40ba6fe2b08b376

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#58763
No description provided.