Fix T58763: Sample color fails with mirror modifier